# sen-py

./: .license_template  Cargo.toml  Makefile.toml  README.md  README.rst  pyproject.toml
.github/workflows/: ci.yml
examples/: sen.py
src/: lib.rs
