[tool.poetry]
name = "sen-py"
version = "0.1.0"
description = "The Senpy Club API Wrapper for Python"
authors = ["Fuwn <fuwnzy@gmail.com>"]
license = "GPL-3.0-only"
readme = "README.rst"
repository = "https://github.com/senpy-club/sen-py"
keywords = ["rust", "anime", "senpy", "senpy-club"]

[tool.poetry.dependencies]
python = ">=3.6"

[build-system]
requires = ["maturin>=0.12,<0.13"]
build-backend = "maturin"
